experiments/logsICC/9553.log
/uufs/chpc.utah.edu/common/home/u1074259/ytopt/experiments/3mm_mk3/tmp_files/9553.c(78): warning #161: unrecognized #pragma
    #pragma scop
            ^

/uufs/chpc.utah.edu/common/home/u1074259/ytopt/experiments/3mm_mk3/tmp_files/9553.c(81): error: unrecognized OpenMP #pragma
      #pragma omp 
              ^

/uufs/chpc.utah.edu/common/home/u1074259/ytopt/experiments/3mm_mk3/tmp_files/9553.c(84): error: unrecognized OpenMP #pragma
            #pragma omp 
                    ^

/uufs/chpc.utah.edu/common/home/u1074259/ytopt/experiments/3mm_mk3/tmp_files/9553.c(93): error: unrecognized OpenMP #pragma
      #pragma omp 
              ^

/uufs/chpc.utah.edu/common/home/u1074259/ytopt/experiments/3mm_mk3/tmp_files/9553.c(96): error: unrecognized OpenMP #pragma
            #pragma omp 
                    ^

/uufs/chpc.utah.edu/common/home/u1074259/ytopt/experiments/3mm_mk3/tmp_files/9553.c(105): error: unrecognized OpenMP #pragma
      #pragma omp 
              ^

/uufs/chpc.utah.edu/common/home/u1074259/ytopt/experiments/3mm_mk3/tmp_files/9553.c(108): error: unrecognized OpenMP #pragma
  	#pragma omp 
  	        ^

/uufs/chpc.utah.edu/common/home/u1074259/ytopt/experiments/3mm_mk3/tmp_files/9553.c(117): warning #161: unrecognized #pragma
    #pragma endscop
            ^

compilation aborted for /uufs/chpc.utah.edu/common/home/u1074259/ytopt/experiments/3mm_mk3/tmp_files/9553.c (code 2)
